# stardew-assistant

./: .gitignore  README.md  compose.yaml  main.py  pyproject.toml  wiki_crawler.py
.github/workflows/: build-and-deploy.yaml
app/: .dockerignore  Dockerfile  compose.yaml  main.py  pages.csv  pyproject.toml  seed_vector_db.ipynb  template.env  wiki_crawler.py
app/api/: chat.py  health.py
app/evaluations/: dataset.jsonl  judge.py  main.py  prepare_dataset.py
app/evaluations/results/: results_llm.csv  results_nli.csv
app/mcp_tools/: wiki_processor.py
app/persistences/: cache.py  cached_repository.py  database.py  ioc.py  mongo_db.py  redis.py
app/rag_pipeline/: crawler.py  main.py  parser.py
app/services/: chat_service.py  container.py  ioc.py  mcp_client.py  query_service.py
app/services/tools/: wiki_tool.py
db/: chroma.sqlite3
k8s/: app-manifest.yaml  mongodb-deployment.yaml  mongodb-manifest.yaml  redis-deployment.yaml  redis-manifest.yaml  secret-provider.yaml  secret.template.yaml  web-deployment.yaml
mcp/: main.py
server/: mcp_client.py
web/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
web/src/: App.tsx  index.css  index.html
web/src/clients/: chatClient.ts
web/src/components/: ChatForm.tsx  Dialog.tsx  Header.tsx  NewChatButton.tsx
web/src/components/Chat/: Chat.tsx  ChatForm.tsx
web/src/components/MessageList/: MessageBubble.tsx  MessageList.tsx
web/src/components/Settings/: SavedChats.tsx  SettingsButton.tsx  SettingsWindow.tsx  SettingsWrapper.tsx  ThemeToggle.tsx
web/src/contexts/: chatsContext.tsx  themeContext.tsx
web/src/hooks/: useChats.ts  useTheme.ts
web/src/services/: chatService.ts  storageService.ts
