[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.24.0",
    "beautifulsoup4>=4.14.3",
    "black>=25.1.0",
    "chromadb>=1.5.8",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.3",
    "motor>=3.7.1",
    "openai>=1.99.1",
    "openai-agents>=0.2.5",
    "python-dotenv>=1.1.0",
    "redis[hiredis]>=6.2.0",
    "sentence-transformers>=5.4.1",
    "transformers>=5.7.0",
    "uuid>=1.30",
    "uvicorn>=0.34.3",
]

[tool.black]
line-length = 120
