[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.24.0",
    "beautifulsoup4>=4.14.3",
    "black>=25.1.0",
    "chromadb>=1.5.8",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "langmem>=0.0.30",
    "motor>=3.7.1",
    "onnxruntime>=1.25.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.1.0",
    "redis[hiredis]>=6.2.0",
    "sentence-transformers>=5.4.1",
    "transformers>=5.7.0",
    "uuid>=1.30",
    "uvicorn>=0.34.3",
]

[tool.black]
line-length = 120
